--- a/example/fonts_map.html
+++ b/example/fonts_map.html
@@ -28,7 +28,11 @@
                 availableFonts: {'arial': '/example/font-1.ttf', 'times new roman': '/example/font-2.ttf', 'for example this file wouldnt be used': '/nope.ttf'}, // All available fonts (font name should be lower case). It will load only fonts really used in sub.
                 //onReady: onReadyFunction,
                 //debug: true,
-                workerUrl: '/js/subtitles-octopus-worker.js'
+                workerUrl: '/js/subtitles-octopus-worker.js',
+                files: {
+                    'fonts.conf': { url: '/fonts.conf' },
+                    'default.ttf': { url: '/default.ttf' }
+                }
             };
             window.octopusInstance = new SubtitlesOctopus(options); // You can experiment in console
         };
