--- a/example/videojs.html
+++ b/example/videojs.html
@@ -24,11 +24,15 @@
         window.SubtitlesOctopusOnLoad = function () {
             var options = {
                 video: video,
-                subUrl: '/example/test.ass',
+                subUrl: '/example/test2.ass',
                 fonts: ['/example/font-1.ttf', '/example/font-2.ttf'],
                 //onReady: onReadyFunction,
                 //debug: true,
-                workerUrl: '/js/subtitles-octopus-worker.js'
+                workerUrl: '/js/subtitles-octopus-worker.js',
+                files: {
+                    'fonts.conf': { url: '/fonts.conf' },
+                    'default.ttf': { url: '/default.ttf' }
+                }
             };
             window.octopusInstance = new SubtitlesOctopus(options); // You can experiment in console
         };
